<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_edit_goals"
    android:minHeight="121dp"
    android:theme="@style/MaterialDes"
    tools:context=".Activities.ActivityGoalAdd">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarEditGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/textViewEditGoalTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/hintGoalTitle"
        android:inputType="text"
        android:textColor="@color/colorLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarEditGoal" />

    <TextView
        android:id="@+id/textViewEditGStartDatePicked"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:textAlignment="center"
        android:textColor="@color/colorLabel"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonEdtGoalStartDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditGoalTitle" />

    <TextView
        android:id="@+id/textViewEditGEndDatePicked"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:textAlignment="center"
        android:textColor="@color/colorLabel"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonEditGoalEndDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditGStartDatePicked" />


    <android.support.design.button.MaterialButton
        android:id="@+id/buttonSaveChangesGoal"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/strButtonEditGoal_SaveChanges"
        app:backgroundTint="#be60fa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditGoalCategory"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.design.button.MaterialButton
        android:id="@+id/buttonEdtGoalStartDate"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/strButtonEditGoal_ChangeDate"
        android:textAllCaps="true"
        android:textColor="@color/colorButtonOutlineV1"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewEditGStartDatePicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/colorButtonOutlineV1" />

    <android.support.design.button.MaterialButton
        android:id="@+id/buttonEditGoalEndDate"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/strButtonEditGoal_ChangeDate"
        android:textColor="@color/colorButtonOutlineV1"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewEditGEndDatePicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/colorButtonOutlineV1" />

    <android.support.design.button.MaterialButton
        android:id="@+id/buttonEditGoalPickColor"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="101dp"
        android:layout_height="54dp"
        android:layout_marginEnd="48dp"
        android:text="@string/string_Toolbar_Button_Pick_Color"
        android:textColor="@color/colorButtonOutlineV1"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/viewEditSelectedColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@color/colorButtonOutlineV1" />

    <android.support.design.button.MaterialButton
        android:id="@+id/viewEditSelectedColor"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="28dp"
        android:layout_height="40dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:clickable="false"
        android:elevation="0dp"
        app:backgroundTint="@color/color_goal_white"
        app:layout_constraintEnd_toStartOf="@+id/buttonEditGoalPickColor"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEditGEndDatePicked"
        app:strokeColor="@color/colorButtonOutlineV1" />

    <Spinner
        android:id="@+id/spinnerEditGoalCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="72dp"
        android:background="@color/colorTransparent"
        android:popupBackground="@color/colorTransparent"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEditSelectedColor" />


</android.support.constraint.ConstraintLayout>